--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "swiper": "^11.0.4"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "20.10.8",
+    "@types/react": "18.2.47",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
